# YiriBot

./: .gitmodules  .gitmoji-changelogrc  .pylintrc  CHANGELOG.md  LICENSE  README.md  mirai_onebot  pyproject.toml
.ropeproject/: autoimport.db
examples/: handle_message.py  mirai_onebot  yiribot
tests/: test_bot.py  test_endpoint.py
yiribot/: __init__.py  bot.py  endpoint.py  exceptions.py  router.py
yiribot/endpoint/: __init__.py  argument.py  base.py  params.py
yiribot/utils/: __init__.py  logger.py
