[tool.poetry]
name = "yiribot"
version = "0.0.1"
description = "An Asynchronous, High performance and Modern ChatBot Framework."
authors = ["XYCode Kerman <xycode-xyc@outlook.com>"]
license = "LGPL-3.0 & Anti-996"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
rich = "^13.7.1"
anyio = "^4.4.0"
asyncer = "^0.0.7"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
flake8 = "^7.1.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["*/YiriOneBot/*", "*/mirai_onebot/*", "*/tests/*"]
